# rs-mixin

./: .gitignore  COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md
.circleci/: COVERALLS_SETUP.zh_CN.md  QUICKSTART.zh_CN.md  README.md  README.zh_CN.md  SETUP.md  SETUP.zh_CN.md
src/: auditable.rs  creatable.rs  data_with_max_age.rs  deletable.rs  desensitizable.rs  emptyful.rs  has_info.rs  has_info_with_entity.rs  has_specific_info.rs  identifiable.rs  info.rs  info_with_entity.rs  lib.rs  modifiable.rs  normalizable.rs  predefinable.rs  validatable.rs  with_birthday.rs  with_code.rs  with_comment.rs  with_email.rs  with_entity.rs  with_index.rs  with_key.rs  with_name.rs  with_password.rs  with_security_key.rs  with_status.rs  with_udid.rs  with_username.rs  with_uuid.rs  with_visibility.rs
tests/: auditable_tests.rs  creatable_tests.rs  data_with_max_age_tests.rs  deletable_tests.rs  desensitizable_tests.rs  emptyful_tests.rs  has_info_tests.rs  has_info_with_entity_tests.rs  has_specific_info_tests.rs  identifiable_tests.rs  info_tests.rs  info_with_entity_tests.rs  mixin_traits_tests.rs  modifiable_tests.rs  normalizable_tests.rs  predefinable_tests.rs  traits_tests.rs  validatable_tests.rs  with_birthday_tests.rs  with_code_tests.rs  with_comment_tests.rs  with_email_tests.rs  with_entity_tests.rs  with_index_tests.rs  with_key_tests.rs  with_name_tests.rs  with_password_tests.rs  with_security_key_tests.rs  with_status_tests.rs  with_udid_tests.rs  with_username_tests.rs  with_uuid_tests.rs  with_visibility_tests.rs
