[package]
name = "qubit-mixin"
version = "0.2.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-mixin"
description = "Trait mixins for domain objects, providing common properties and behaviors"
homepage = "https://github.com/qubit-ltd/rs-mixin"
documentation = "https://docs.rs/qubit-mixin"
readme = "README.md"
keywords = ["mixin", "trait", "domain", "model", "qubit"]
categories = ["data-structures", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_mixin"
doctest = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

